// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentificationsCount renders default reliably 1`] = `
<View
  accessibilityLabel="1 identification"
  accessible={true}
  style={
    Array [
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "rgba(103, 80, 164, 1)",
          "fontSize": 14,
        },
        undefined,
        Object {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Whitney-Light",
        },
        Array [
          Object {
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "400",
          },
          Object {
            "color": "#454545",
          },
          Array [
            Object {
              "marginLeft": 6,
            },
          ],
        ],
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`IdentificationsCount renders filled reliably 1`] = `
<View
  accessibilityLabel="1 identification"
  accessible={true}
  style={
    Array [
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "rgba(103, 80, 164, 1)",
          "fontSize": 14,
        },
        undefined,
        Object {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Whitney-Light",
        },
        Array [
          Object {
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "400",
          },
          Object {
            "color": "#454545",
          },
          Array [
            Object {
              "marginLeft": 6,
            },
          ],
        ],
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`IdentificationsCount renders white reliably 1`] = `
<View
  accessibilityLabel="1 identification"
  accessible={true}
  style={
    Array [
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "rgba(255, 255, 255, 1)",
          "fontSize": 14,
        },
        undefined,
        Object {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Whitney-Light",
        },
        Array [
          Object {
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "fontWeight": "400",
          },
          Object {
            "color": "#454545",
          },
          Array [
            Object {
              "marginLeft": 6,
            },
            Object {
              "color": "#ffffff",
            },
          ],
        ],
      ]
    }
  >
    1
  </Text>
</View>
`;
